docs: 스크립트 수정

--- a/아무튼스크립트.md
+++ b/아무튼스크립트.md
@@ -108,10 +108,12 @@ urlpatterns = [
 ```python
 from django.contrib import admin
 from django.urls import path, include
+from django.views.generic import TemplateView
 
 urlpatterns = [
     path('admin/', admin.site.urls),
-    path('api/', include('books.urls')),  # 이 부분 추가
+    path('api/', include('books.urls')), 
+    path('', TemplateView.as_view(template_name='index.html')),
 ]
 
 # django_demo/settings.py
@@ -119,9 +121,9 @@ urlpatterns = [
 INSTALLED_APPS = [
     # ... 기존의 앱들
     'rest_framework',
-    'books',  # 이 부분 추가
+    'books', 
+    'django_demo',
 ]
-
 ```
 
 
