--- a/아무튼스크립트.md
+++ b/아무튼스크립트.md
@@ -1,14 +1,18 @@
 ## 1. VSCode에서 Django 프로젝트 생성
+
 > django-admin startproject `myproject`
+
 ```bash
 django-admin startproject django_demo .
 #여기서 마지막에 있는 .(점)은 현재 디렉터리(C:\Users\LENOVO\Desktop\django_demo)에 프로젝트를 생성.
-``` 
+```
+
 이 명령을 실행하면 django_demo 디렉터리 내에 Django 프로젝트가 생성됩니다.
 
 ## 2. Django 앱 생성
+
 > python manage.py startapp myapp
-이 단계는 Django 앱을 생성하는 것입니다. Django 프로젝트는 하나 이상의 앱으로 구성될 수 있으며, 각 앱은 특정 기능을 담당합니다. 예를 들어, `Book` 모델과 관련된 CRUD 작업을 수행하는 앱을 생성할 수 있습니다.
+> 이 단계는 Django 앱을 생성하는 것입니다. Django 프로젝트는 하나 이상의 앱으로 구성될 수 있으며, 각 앱은 특정 기능을 담당합니다. 예를 들어, `Book` 모델과 관련된 CRUD 작업을 수행하는 앱을 생성할 수 있습니다.
 
 ```bash
 python manage.py startapp books
@@ -16,8 +20,8 @@ python manage.py startapp books
 
 이 명령어는 `books`라는 이름의 Django 앱을 생성합니다. 앱이 생성되면 `books` 디렉터리가 `django_demo` 프로젝트 디렉터리 내에 생성됩니다.
 
+## 3. 모델/뷰/시리얼라이저 작성
 
-## 3. 모델/뷰/시리얼라이저 작성  
 models.py, views.py, serializers.py 파일을 작성  
  `books` 앱 내에는 `models.py`, `views.py`, `admin.py` 등의 파일이 생성되었는데, 이 파일들에서 필요로 하는 기능을 구현하게 됩니다.
 
@@ -33,11 +37,11 @@ from django.db import models
 class Book(models.Model):
     id = models.AutoField(primary_key=True)  # 자동 증가하는 ID (기본 키)
     title = models.CharField(max_length=100)  # 문자열
-    author = models.CharField(max_length=100)  # 문자열 
+    author = models.CharField(max_length=100)  # 문자열
     price = models.IntegerField()  # 정수 필드
 ```
 
-모델을 정의한 후에는 데이터베이스에 이 변경사항을 반영해야 합니다. 
+모델을 정의한 후에는 데이터베이스에 이 변경사항을 반영해야 합니다.
 이를 위해 마이그레이션 파일을 생성하고 적용합니다.
 
 ```bash
@@ -52,9 +56,10 @@ python manage.py migrate
 pip install djangorestframework
 ```
 
-설치가 완료되면, `views.py`와 `serializers.py`에서 필요한 로직을 작성할 수 있습니다. 
+설치가 완료되면, `views.py`와 `serializers.py`에서 필요한 로직을 작성할 수 있습니다.
 
 ### Serializers 작성
+
 먼저 `books` 앱 디렉터리 내에 `serializers.py` 파일을 생성해주세요. 그리고 다음의 코드를 그 파일에 작성합니다.
 
 ```python
@@ -68,9 +73,11 @@ class BookSerializer(serializers.ModelSerializer):
 ```
 
 ### Views 작성
+
 다음으로 `books/views.py` 파일을 열어 다음 코드를 작성합니다.
 
 ```python
+from django.shortcuts import render
 from rest_framework import viewsets
 from .models import Book
 from .serializers import BookSerializer
@@ -78,14 +85,17 @@ from .serializers import BookSerializer
 class BookViewSet(viewsets.ModelViewSet):
     queryset = Book.objects.all()
     serializer_class = BookSerializer
+
+def book_list(request):
+    books = Book.objects.all()
+    return render(request, 'index.html', {'books': books})
 ```
 
-이렇게 하면 간단한 CRUD API가 준비됩니다. 
+이렇게 하면 간단한 CRUD API가 준비됩니다.
 이제 이를 URL에 연결해야 하는데, 이 부분은 다음 단계에서 진행하겠습니다.
 
-
-
 ## 4. URL 설정
+
 작성한 `BookViewSet`을 실제 URL에 연결하기 위해 `urls.py` 파일을 설정해야 합니다. 먼저 `books` 앱 디렉터리에 `urls.py` 파일을 생성해 주세요.
 
 그리고 생성한 `books/urls.py` 파일에 다음의 코드를 작성합니다.
@@ -105,6 +115,7 @@ urlpatterns = [
 
 마지막으로, 프로젝트 전체(`django_demo/urls.py`)의 URL 설정을 업데이트해서 `books` 앱의 URL을 포함시켜 줍니다. `django_demo/urls.py` 파일을 열고 다음과 같이 수정합니다.
 그리고 `django_demo/settings.py` 파일을 열어 `INSTALLED_APPS` 섹션에 `'books'`,를 추가해 주세요.
+
 ```python
 from django.contrib import admin
 from django.urls import path, include
@@ -112,7 +123,7 @@ from django.views.generic import TemplateView
 
 urlpatterns = [
     path('admin/', admin.site.urls),
-    path('api/', include('books.urls')), 
+    path('api/', include('books.urls')),
     path('', TemplateView.as_view(template_name='index.html')),
 ]
 
@@ -121,16 +132,102 @@ urlpatterns = [
 INSTALLED_APPS = [
     # ... 기존의 앱들
     'rest_framework',
-    'books', 
+    'books',
     'django_demo',
 ]
 ```
 
-
 이렇게 설정하면 `/api/books/` URL로 `Book` 모델에 대한 CRUD API가 제공됩니다.
-
-
 
 ## 코드 전송: 작성한 코드를 리눅스 서버로 SCP나 FTP를 사용하여 전송
 
 ## 서버에서 테스트: 리눅스 서버에서 Docker 컨테이너를 사용하여 테스트 실행
+
+---
+# 장고 - MySQL 연결
+
+Django 프로젝트와 MySQL 데이터베이스를 연결하는 과정은 다음과 같습니다.
+
+## 1. Mysql패키지 설치
+
+- 방법1 (일반적인 경우)
+
+  ```bash
+  pip install mysqlclient #윈도우
+  sudo apt-get install python3-dev default-libmysqlclient-dev build-essential # Debian / Ubuntu
+  sudo yum install python3-devel mysql-devel # Red Hat / CentOS
+  ```
+  
+- 방법2 (MySQL Connector를 이용하는 경우)
+
+  ```bash
+  pip install mysql-connector-python
+  ```
+
+  > [공식 문서 참조](https://docs.djangoproject.com/en/4.2/ref/databases/#mysql-notes)
+
+## 2. Django 프로젝트 설정 변경
+
+`settings.py` 파일에서 데이터베이스 설정을 변경해야 합니다. 
+
+```python
+# settings.py
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.mysql',
+        'NAME': 'example', #your_database_name
+        'USER': 'myname', #your_mysql_username
+        'PASSWORD': 'your_mysql_password',
+        'HOST': 'mysql.db.com', #your_mysql_server_host or IP that your DB is hosted on
+        'PORT': '13306',
+    }
+}
+```
+
+### 기존 테이블 사용 (Optional)
+
+장고는 모델을 데이터베이스 테이블로 변환할 때 앱의 이름과 모델의 이름을 조합하여 테이블 이름을 자동으로 생성합니다. 예를 들어, `books`라는 앱 내에 `Book`이라는 모델이 있다면, 데이터베이스에는 `books_book`이라는 이름의 테이블이 생성됩니다.
+
+만약 특정한 테이블 이름을 사용하고 싶다면, 모델 클래스 내에서 `Meta` 클래스를 정의하여 `db_table` 옵션을 설정할 수 있습니다. 이렇게 하면 `Book` 모델이 `books`라는 테이블에 매핑됩니다.
+```python
+class Book(models.Model):
+    title = models.CharField(max_length=100)
+    author = models.CharField(max_length=100)
+    price = models.IntegerField()
+
+    class Meta:
+        db_table = 'books'
+```
+
+기존에 MySQL에 생성되어 있는 테이블을 사용하려면 `inspectdb` 명령을 사용하여 모델을 자동 생성할 수 있습니다.
+
+```bash
+python manage.py inspectdb > your_app_name/models.py  # 기존 테이블과 모델을 매핑
+```
+
+이렇게 생성된 모델 코드를 적절히 수정한 후, `settings.py`의 `INSTALLED_APPS`에 해당 앱을 추가합니다. 
+```
+[   ...
+    'django_demo',
+    'books',
+]
+```
+
+## 3. 마이그레이션
+
+```bash
+python manage.py makemigrations
+python manage.py migrate
+```
+
+## 4. 서버 실행을 통한 확인
+
+```bash
+python manage.py runserver
+```
+
+이 명령을 통해 서버를 실행한 후, 작동이 잘 되는지 확인합니다.
+
+Django와 MySQL이 성공적으로 연결되면, 이제 Django를 통해 MySQL 데이터베이스를 사용할 수 있습니다.
+
+---
